# RustTerminalArt

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: build_and_test.yml  on_release.yml  release.yml
src/: ansi.rs  ascii.rs  color.rs  main.rs  print.rs  utils.rs
