[package]
name = "rust_terminal_art"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
clap = { version = "*", features = ["derive"] }
structopt = "*"
quicli = "*"
exitcode = "*"
term_size = "*"