[package]
name = "termart"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
clap = { version = "*", features = ["derive"] }
structopt = "*"
quicli = "*"
exitcode = "*"
term_size = "*"
rgb2ansi256 = "*"